# PenguLoader

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  API_DOCS.md  HOW_IT_WORKS.md  INSECURE_OPTIONS.md  LICENSE  MIGRATION_TO_V1.md  README.md  league-loader.sln  makefile  pengu-loader.sln  pengu.sln
.github/: FUNDING.yml
LeagueLoader/: App.manifest  App.xaml.cs  FodyWeavers.xml  LeagueLoader.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Version.cs
core/: bin2c.c  build-clang.bat  core.vcxproj  core.vcxproj.filters  insert_dylib.c  libcef.lib  libcef32.lib
d3d9/: core.vcxproj  d3d9.vcxproj  d3d9.vcxproj.filters
gui/: Version.cs  app.manifest  gui.csproj  packages.config
loader/: App.config  App.xaml  App.xaml.cs  FodyWeavers.xml  MainWindow.xaml  MainWindow.xaml.cs  PluginItem.xaml  PluginItem.xaml.cs  Program.cs  README.md  Version.cs  index.html  loader.csproj  package.json  pnpm-lock.yaml  postbuild.bat  tailwind.config.ts  translations.json  tsconfig.json  tsconfig.node.json  vite.config.ts
loader/src-tauri/: Cargo.toml  tauri.conf.json
loader/src-tauri/icons/: icon.icns
loader/src-tauri/src/: config.rs  main.rs  shell.rs
loader/src-tauri/src/macos/: core.rs  dylib.rs  mod.rs  socket.rs  startup.rs  tray.rs  utils.rs  webview.rs
loader/src-tauri/src/windows/: mod.rs  mod_ifeo.rs  mod_symlink.rs  utils.rs
plugin/: README.md  index.html  vite.config.ts
plugins/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  twind.config.ts  vite.config.ts
scripts/: setup.iss
setup/: setup.iss
(+289 files in other folders)
