[package]
name = "pengu-loader"
version = "1.2.0"
description = "Pengu Loader app"
edition = "2021"
license = "MIT"
repository = "https://github.com/PenguLoader/PenguLoader"
homepage = "https://pengu.lol"
categories = ["application"]
keywords = ["pengu", "pengu-loader", "league-client", "league-of-legends"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
libc = "0.2"
tauri = { version = "1", features = [ "window-hide",
  "system-tray",
  "dialog-all",
  "window-close",
  "window-minimize",
  "window-set-title",
  "window-set-focus",
  "window-unminimize",
  "window-show",
  "window-start-dragging",
  "fs-write-file",
  "fs-rename-file",
  "fs-exists",
  "fs-read-file",
  "fs-create-dir",
  "fs-read-dir",
  "path-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
named-lock = "0.4"

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.52"
is_elevated = "0.1"
runas = "1.2"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"
base64 = "0.22"
native-tls = "0.2"
tungstenite = { version = "0.23", features = ["default", "native-tls"] }
auto-launch = "0.5"

[dependencies.sysinfo]
version = "0.31"
default-features = false
features = ["system"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
